[project]
name = "blank-app-template"
version = "0.1.0"
description = "A simple Streamlit app template."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.1",
    "ortools>=9.15.6755",
    "plotly>=6.9.0",
    "scikit-learn>=1.9.0",
    "streamlit>=1.60.0",
    "xgboost>=3.3.0",
]

[tool.uv]
package = false
